[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "makelive"
authors = [{name = "Rhet Turnbull", email = "rturnbull+git@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">3.9"
dependencies = [
    "pyobjc-core>=9.2",
    "pyobjc-framework-AVFoundation>=9.2",
    "pyobjc-framework-Contacts>=9.2",
    "pyobjc-framework-CoreLocation>=9.2",
    "pyobjc-framework-Quartz>=9.2",
    "pyobjc-framework-UniformTypeIdentifiers>=9.2",
    "wheel>=0.41.2",
    "wurlitzer>=3.0.3",
]

[project.urls]
Home = "https://github.com/RhetTbull/makelive"
Issues = "https://github.com/RhetTbull/makelive/issues"
Source = "https://github.com/RhetTbull/makelive"
